# simple-ai-gateway

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test_release.yml
src/simple_ai_gateway/: config.yaml  main.py
src/simple_ai_gateway/backends/: __init__.py  backend_interface.py  echo_backend.py  modal_backend.py  remote_backend.py
