[project]
name = "simple-ai-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.133.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
redis = [
    "redis>=7.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.4",
]

[project.scripts]
simple-ai-gateway = "simple_ai_gateway.main:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
fix = true